# design-patterns

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: checks.yml
src/observer_pattern/observables/: observable_interface.py
src/observer_pattern/observables/subjects/: timed_reminder.py
src/observer_pattern/observers/: observer_interface.py  observers.py
src/strategy_pattern/: animals.py
src/strategy_pattern/strategies/animal_strategies/: eating_strategies.py
strategy_pattern/strategies/animal_strategies/: eating_strategies.py
tests/observer_pattern_test/: test_observer.py
tests/strategy_pattern_tests/: test_strategy.py
