[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "design_patterns"
dynamic = ["version"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.14.2",
    "flake8>=7.1.0",
    "pytest-cov",
    "pre-commit>=3.7.1",
]

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.setuptools.package-dir]
strategy_pattern = "src/strategy_pattern"
observer_pattern = "src/observer_pattern"
